# a11y-mcp

./: .gitignore  CHANGELOG.md  README.md  adobe-a11y-report.html  adobe-wcag22aa-report.html  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
src/a11y_agent/: server.py
src/a11y_agent/accessibility/: __init__.py  report.py
src/a11y_agent/browser/: __init__.py  manager.py
src/a11y_mcp/: __init__.py  server.py
tests/: __init__.py
