[project]
name = "a11y-agent"
version = "0.1.0"
description = "MCP server for accessibility testing with Cloudflare bypass using Camoufox and axe-core"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Antonio Ramirez"}
]
keywords = ["mcp", "accessibility", "a11y", "axe-core", "wcag", "cloudflare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mcp>=1.2.0",
    "camoufox[geoip]>=0.4.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/a11y-agent"
Repository = "https://github.com/yourusername/a11y-agent"
Issues = "https://github.com/yourusername/a11y-agent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
a11y-agent = "a11y_agent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a11y_agent"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# Include the bundled axe.min.js asset
[tool.hatch.build.targets.wheel.force-include]
"src/a11y_agent/assets/axe.min.js" = "a11y_agent/assets/axe.min.js"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/scripts",
    "/tests",
]
